fixed flickering on resume nav bar

--- a/assets/css/Resume/style.css
+++ b/assets/css/Resume/style.css
@@ -100,15 +100,22 @@
 }
 
 
-/*cause of flickering - this sets the base but it gets re-written in the next few classes which we dont want*/
-.navbar .navbar-nav .nav-link:hover,
-.navbar .navbar-nav .nav-link.active-light {
+.navbar .navbar-nav .nav-link {
     padding-left: 15px;
     padding-right: 15px;
     align-self: start;
-    border: thin solid black;
-
 }
+
+.navbar .navbar-nav .nav-link:hover,
+.navbar .navbar-nav .nav-link.active-light {
+    border: thin solid transparent; /* initially transparent border */
+    transition: border-color 0.3s ease; /* smooth transition for border color */
+}
+
+.navbar .navbar-nav .nav-link:hover {
+    border-color: black; /* change border color on hover */
+}
+
 
 /*never using navbar-dark*/
 .navbar .navbar-nav .nav-link:hover,
